--- a/app/src/main/res/layout/fragment_carrito.xml
+++ b/app/src/main/res/layout/fragment_carrito.xml
@@ -1,8 +1,11 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:background="@color/colorBlanco"
+    android:padding="@dimen/margen_padding"
     tools:context="com.example.fabi.atc.Fragmentos.CarritoFragment">ç
     <TextView
         android:fontFamily="sans-serif"
@@ -45,4 +48,4 @@
         android:id="@+id/listaproductoscarrito"
         android:layout_width="match_parent"
         android:layout_height="400dp"/>
-</RelativeLayout>
+</LinearLayout>
