--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,38 @@
     <dimen name="nav_header_vertical_spacing">16dp</dimen>
     <dimen name="nav_header_height">160dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+
+    <!--Unidades de Medida Texto-->
+    <dimen name="titulos_H1">25sp</dimen>
+    <dimen name="texto_mediano">20sp</dimen>
+    <dimen name="texto_generico">18sp</dimen>
+    <dimen name="texto_pequeno">15sp</dimen>
+
+
+    <dimen name="margen_entre_texto">8dp</dimen>
+
+
+
+    <!--Separacion de Contenedores-->
+    <dimen name="margen_derecha">16dp</dimen>
+    <dimen name="margen_izquierda">16dp</dimen>
+    <dimen name="margen_padding">10dp</dimen>
+    <dimen name="margen_margin">8dp</dimen>
+
+    <!--Dimenciones fragment_cantidad_chips-->
+    <dimen name="tamano_imagen">60dp</dimen>
+
+
+
+    <!--Elevaciones-->
+    <dimen name="elevacion_raised_buttom">4dp</dimen>
+    <dimen name="elevacion_card">4dp</dimen>
+    <dimen name="elevacion_floating_buttom">6dp</dimen>
+    <dimen name="elevacion_picker">24dp</dimen>
+
+
+    <!--Tamaño imagenes card.xml-->
+    <dimen name="imagen_card">100dp</dimen>
+
+
 </resources>
