--- a/app/src/main/res/layout/alerteliminar.xml
+++ b/app/src/main/res/layout/alerteliminar.xml
@@ -1,19 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<TableLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="horizontal"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:padding="@dimen/margen_padding"
+    >
     <ImageView
         android:id="@+id/eliminar"
-        android:layout_alignParentLeft="true"
-        android:src="@drawable/cancelar"
-        android:layout_width="50dp"
-        android:layout_height="50dp" />
+        android:src="@drawable/ic_cancelar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
     <TextView
         android:id="@+id/txtmensaje"
         android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
         android:textAlignment="center"
-        android:text="¿Desea eliminar este elemento?"
-        android:layout_toRightOf="@id/eliminar"
+        android:text="@string/texto_eliminar_elemento"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
-</RelativeLayout>
+</TableLayout>
