--- a/app/src/main/res/layout/card.xml
+++ b/app/src/main/res/layout/card.xml
@@ -3,72 +3,73 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     card_view:cardCornerRadius="8dp"
     card_view:cardUseCompatPadding="true"
-    android:layout_marginBottom="16dp"
+    android:elevation="@dimen/elevacion_card"
+    android:layout_margin="@dimen/margen_margin"
     >
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorGris"
-        android:paddingBottom="4dp">
+        android:padding="@dimen/margen_padding">
 
      <ImageView
          android:id="@+id/img"
-         android:layout_width="100dp"
-         android:layout_height="100dp" />
+         android:layout_width="@dimen/imagen_card"
+         android:layout_height="@dimen/imagen_card"
+         android:layout_marginEnd="@dimen/margen_derecha"
+         />
 
         <TextView
-            android:layout_toEndOf="@id/img"
             android:id="@+id/titulocard"
-            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
-            android:text="Titulo"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_toEndOf="@id/img"
+            android:text="@string/sin_conxion"
+            android:textSize="@dimen/titulos_H1"
+            android:textStyle="bold"
+            android:textColor="@color/primaryText"
+            />
         <TextView
             android:layout_toEndOf="@id/img"
             android:id="@+id/subtitulocard"
-            android:textSize="15dp"
-            android:layout_marginTop="10dp"
+            android:textSize="@dimen/texto_pequeno"
+            android:layout_marginTop="@dimen/margen_margin"
             android:layout_below="@id/titulocard"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Subtitulo"
+            android:text="@string/sin_conxion"
             />
         <TextView
             android:layout_toEndOf="@id/img"
             android:id="@+id/precio"
-            android:textSize="15dp"
+            android:textSize="@dimen/texto_pequeno"
             android:layout_marginTop="10dp"
             android:layout_below="@id/subtitulocard"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Subtitulo"
+            android:text="@string/sin_conxion"
+
             />
         <TextView
-            android:id="@+id/cantidadproductos"
-            android:layout_marginTop="10dp"
-            android:text="Cantidad"
-            android:layout_toRightOf="@id/img"
             android:layout_below="@id/precio"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:id="@+id/cantidadproductos"
+            android:layout_marginTop="10dp"
+            android:text="@string/sin_conxion"
+            android:layout_toRightOf="@id/img"
+            android:textSize="@dimen/texto_pequeno"
+    />
         <Button
+            android:id="@+id/btnCarrito"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:focusableInTouchMode="false"
             android:focusable="false"
-            android:id="@+id/btnCarrito"
             android:layout_centerInParent="true"
             android:layout_alignParentRight="true"
-            android:background="@drawable/agregar"
-            android:layout_width="50dp"
-            android:layout_height="50dp" />
-
-
-
-
-
-
-
+            android:background="@drawable/agregar" />
     </RelativeLayout>
 </android.support.v7.widget.CardView>
