--- a/app/src/main/res/layout/fragment_catalogo.xml
+++ b/app/src/main/res/layout/fragment_catalogo.xml
@@ -11,12 +11,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorBlanco"
     tools:context="com.example.fabi.atc.Fragmentos.Catalogo">
 <ListView
     android:id="@+id/lvCatalogo"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"></ListView>
+    android:layout_height="match_parent"/>
 
 </FrameLayout>
 </android.support.v4.widget.SwipeRefreshLayout>
