--- a/app/src/main/res/layout/fragment_creditos_pendientes.xml
+++ b/app/src/main/res/layout/fragment_creditos_pendientes.xml
@@ -6,25 +6,30 @@
     android:layout_height="match_parent"
     android:background="@color/colorBlanco"
     tools:context="com.example.fabi.atc.Fragmentos.ClientesActivos">
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorBlanco"
     tools:context="com.example.fabi.atc.Fragmentos.CreditosPendientes">
     <TextView
-        android:layout_marginTop="10dp"
-        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
         android:id="@+id/puntoVenta"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/margen_margin"
+        android:padding="@dimen/margen_padding"
+        android:textColor="@color/primaryText"
+        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
+ />
     <Spinner
-        android:layout_marginTop="10dp"
-       android:paddingLeft="50dp"
         android:layout_toEndOf="@id/puntoVenta"
-        android:id="@+id/spinnerClaves"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:id="@+id/spinnerClaves"
+        android:layout_margin="@dimen/margen_margin"
+        android:padding="@dimen/margen_padding"
+/>
     <ListView
         android:id="@+id/CreditoClientes"
         android:layout_below="@id/spinnerClaves"
