--- a/app/src/main/res/layout/fragment_detalles_pedidos.xml
+++ b/app/src/main/res/layout/fragment_detalles_pedidos.xml
@@ -12,9 +12,11 @@
         android:id="@+id/txtTotalpedidos"
         android:textSize="20sp"
         android:fontFamily="sans-serif-smallcaps"
-        android:text="Total:"
+        android:text="@string/texto_total"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
+        android:textColor="@color/primaryText"
+        android:textStyle="bold"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 </RelativeLayout>
