--- a/app/src/main/res/layout/modelo.xml
+++ b/app/src/main/res/layout/modelo.xml
@@ -1,13 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:padding="@dimen/margen_padding"
+    >
 
     <ImageView
         android:id="@+id/imagen"
-        android:layout_width="100dp"
-        android:layout_height="80dp"
-        android:src="@drawable/ic_menu_camera" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_menu_camera"
+        android:layout_margin="@dimen/margen_margin"
+        />
 
     <TextView
         android:id="@+id/titulo"
@@ -15,7 +19,10 @@
         android:layout_toRightOf="@id/imagen"
         android:text="Titulo"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:textSize="@dimen/titulos_H1"
+        android:layout_height="wrap_content"
+        android:textColor="@color/primaryText"
+        android:textStyle="bold"/>
     <TextView
         android:id="@+id/subtitulo"
         android:textSize="15dp"
@@ -25,6 +32,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Subtitulo"
+        android:textColor="@color/secondarText"
+        android:textStyle="bold"
         />
 
 </RelativeLayout>
