--- a/app/src/main/res/layout/modelo_spinner.xml
+++ b/app/src/main/res/layout/modelo_spinner.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:padding="@dimen/margen_padding">
 
     <TextView
         android:textAlignment="center"
@@ -9,6 +10,9 @@
         android:text="Ciudad"
         android:id="@+id/spinnerCiudad"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/margen_margin"
+        android:textStyle="bold"
+        />
 
 </RelativeLayout>
