--- a/app/src/main/res/layout/modeloabonos.xml
+++ b/app/src/main/res/layout/modeloabonos.xml
@@ -1,32 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:padding="@dimen/margen_padding">
     <TextView
     android:id="@+id/txtfolio"
     android:textColor="@color/colorPrimaryDark"
     android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
-    android:fontFamily="monospace"
-    android:text="Folio"
+
+    android:text="@string/texto_folio"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content" />
+    android:layout_height="wrap_content"
+        android:textStyle="bold"
+    />
     <TextView
         android:id="@+id/txtFecha"
-        android:textSize="17dp"
-        android:fontFamily="sans-serif"
-        android:text="Fecha"
+        android:textSize="@dimen/texto_generico"
+        android:text="@string/texto_fecha"
         android:layout_below="@id/txtfolio"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:textColor="@color/secondarText"
+        android:textStyle="bold"/>
+
     <TextView
-         android:layout_marginTop="10dp"
+        android:layout_marginTop="10dp"
         android:id="@+id/txtAbono"
         android:textSize="20dp"
-        android:textStyle="bold"
-        android:fontFamily="monospace"
         android:text="Abono"
+        android:textColor="@color/primaryText"
         android:layout_alignParentRight="true"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:textStyle="bold"/>
 
 </RelativeLayout>
