--- a/app/src/main/res/layout/modelocreditosliquidados.xml
+++ b/app/src/main/res/layout/modelocreditosliquidados.xml
@@ -3,27 +3,29 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     card_view:cardCornerRadius="8dp"
     card_view:cardUseCompatPadding="true"
-    android:layout_marginBottom="16dp"
+    android:elevation="@dimen/elevacion_card"
+    android:padding="@dimen/margen_padding"
     >
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorGris"
+        android:layout_margin="@dimen/margen_margin"
+        android:padding="@dimen/margen_padding"
         android:paddingBottom="4dp">
 
         <TextView
-            android:fontFamily="serif"
             android:id="@+id/Total"
             android:layout_toEndOf="@id/img"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
             android:text="Total"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:textColor="@color/primaryText"
+            android:textStyle="bold"/>
         <TextView
-            android:fontFamily="serif-monospace"
             android:id="@+id/folio"
             android:layout_toEndOf="@id/img"
             android:textSize="20dp"
@@ -32,9 +34,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Folio"
+            android:textStyle="bold"
+            android:textColor="@color/secondarText"
             />
         <TextView
-            android:fontFamily="serif-monospace"
+
             android:id="@+id/ClaveCliente"
             android:layout_toEndOf="@id/img"
             android:textSize="15dp"
@@ -43,16 +47,20 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Clave"
+            android:textColor="@color/secondarText"
+            android:textStyle="bold"
             />
         <TextView
             android:layout_centerVertical="true"
             android:textSize="18dp"
-            android:fontFamily="serif"
+
             android:text="Fecha"
             android:id="@+id/fechaCredito"
             android:layout_below="@id/ClaveCliente"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:textColor="@color/primaryText"
+            android:textStyle="bold"/>
 
 
     </RelativeLayout>
