--- a/app/src/main/res/layout/fragment_detalles_pedidos.xml
+++ b/app/src/main/res/layout/fragment_detalles_pedidos.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorBlanco"
+    android:padding="@dimen/margen_padding"
     tools:context="com.example.fabi.atc.Fragmentos.DetallesPedidos">
     <ListView
         android:id="@+id/listadetallesPedidos"
@@ -19,4 +20,5 @@
         android:textStyle="bold"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
+
 </RelativeLayout>
