--- a/app/src/main/res/layout/fragment_registro_clientes.xml
+++ b/app/src/main/res/layout/fragment_registro_clientes.xml
@@ -35,6 +35,7 @@
      android:textAlignment="center"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
+     android:textColor="@color/primaryText"
      android:textStyle="bold"/>
 
     <EditText
