--- a/app/src/main/res/layout/fragment_fragemen_menu_inicio.xml
+++ b/app/src/main/res/layout/fragment_fragemen_menu_inicio.xml
@@ -7,7 +7,9 @@
     <!-- TODO: Update blank fragment layout -->
 <LinearLayout
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:layout_centerHorizontal="true">
 
     <Button
         android:id="@+id/idCatalogo"
