--- a/app/src/main/res/layout/fragment_registro_clientes.xml
+++ b/app/src/main/res/layout/fragment_registro_clientes.xml
@@ -1,10 +1,15 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorBlanco"
     android:padding="@dimen/margen_padding"
     tools:context="com.example.fabi.atc.Fragmentos.RegistroClientes">
+<RelativeLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
+
     <ImageView
         android:id="@+id/imgUsuario"
         android:layout_width="wrap_content"
@@ -14,7 +19,7 @@
 
 
     <TextView
-      android:textAlignment="center"
+        android:textAlignment="center"
         android:layout_toEndOf="@id/imgUsuario"
         android:layout_marginTop="10dp"
         android:id="@+id/Clave"
@@ -27,16 +32,16 @@
         android:textStyle="bold"
         />
 
- <EditText
-     android:layout_toEndOf="@id/imgUsuario"
-     android:layout_below="@id/Clave"
-     android:enabled="false"
-     android:id="@+id/edtClave"
-     android:textAlignment="center"
-     android:layout_width="match_parent"
-     android:layout_height="wrap_content"
-     android:textColor="@color/primaryText"
-     android:textStyle="bold"/>
+    <EditText
+        android:layout_toEndOf="@id/imgUsuario"
+        android:layout_below="@id/Clave"
+        android:enabled="false"
+        android:id="@+id/edtClave"
+        android:textAlignment="center"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textColor="@color/primaryText"
+        android:textStyle="bold"/>
 
     <EditText
         android:inputType=""
@@ -123,7 +128,10 @@
         android:elevation="@dimen/elevacion_raised_buttom"
         android:theme="@style/StyleButton"
         android:layout_centerHorizontal="true"
-        android:layout_alignParentBottom="true"
+        android:layout_below="@id/edtCorreo"
         />
 
 </RelativeLayout>
+
+
+</ScrollView>
